<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    tools:context=".DetalleVehiculoActivity">  
        
    <TableRow>
        <TextView
            android:id="@+id/idVehiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idVehiculo"/>
            
        <TextView
            android:id="@+id/idMatricula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" />
        
        <Button 
            android:id="@+id/botonLLamada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonLLamada"/>
        
       	<Button 
            android:id="@+id/botonSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonSMS"/>
                    
            
    </TableRow>        	
        
    <TableRow>
        
        <TextView
            android:id="@+id/idConductor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idConductor"/>
        	
        <TextView
            android:id="@+id/idNombreConductor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>            
            
    </TableRow>
        
</TableLayout> 

